<resources>

    <string name="app_name">Android Chat</string>
    <string name="test">Hello World</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_to_sign_up_btn_text">Sign up</string>
    <string name="Signup_nickname_hint">Nickname</string>
    <string name="verify_password_sign_up_hint">Verify Password</string>
    <string name="btnSave">Save</string>
    <string name="AddContactUsername">Username</string>
    <string name="AddContactNickname">Nickname</string>
    <string name="AddContactServer">Server</string>
    <string name="login_error_message">Username or Password are incorrect!</string>
    <string name="messgae_type_hint">type here…</string>
    <string name="send_message_text_on_btn">send</string>
    <string name="go_back_btn_text_chat_page">Go back</string>
    <string name="NotificationMessageName">messages</string>
    <string name="NotificationMessageID">messagesNotificationID</string>
    <string name="descriptionNotificationMessage">Chatiz messages</string>
    <string name="myMessage">Yes</string>
    <string name="notMyMessage">No</string>
    <string name="Chatiz">Chatiz</string>
    <string name="BaseURL">http://10.0.2.2:7038/api/</string>
    <string name="ServerURL">http://10.0.2.2:7038/</string>
    <string name="sign_in">Sign In</string>
    <string name="image_pick_signup_button_text">choose image</string>

</resources>