<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seashell"
    tools:context=".FormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AddContactUsername"
            android:transitionName="username" />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AddContactNickname" />

        <EditText
            android:id="@+id/etServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AddContactServer" />

        <!--        change color to red-->
<!--        <TextView-->
<!--            android:id="@+id/AddContactErrorExist"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/login_error_message"-->
<!--            android:textColor="@color/design_default_color_error"-->
<!--            android:textColorHighlight="@color/design_default_color_error"-->
<!--            android:visibility="invisible" />-->



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/grey"
                android:text="Add"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/grey"
                android:text="Go Back"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>